# mtm_ex5_world_of_homework

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  README.md  Troll.cpp  Troll.h  Warrior.cpp  Warrior.h  Weapon.cpp  Weapon.h  Wizard.cpp  Wizard.h  main.cpp
Tests/Alon Libling/: test1.cpp
Tests/Ron Kantorovich/: main.cpp  test_utilities.h
